Modificar todos los sellos en mobile para que aparezcan en vertical y con tamaño máximo.

--- a/index.html
+++ b/index.html
@@ -379,10 +379,10 @@
 
 							<div class="col-xs-12 col-sm-12">
 								<div class="contenido0">
-									<div class="col-xs-6 col-sm-6">
+									<div class="col-xs-12 col-sm-6">
 										<img class="img-responsive right image1 no-animated step step_orderToAnimate-1" src="img/cuatro/olymphilex_stamp.png" alt="Olymphilex Stamp">
 									</div>
-									<div class="col-xs-6 col-sm-6">
+									<div class="col-xs-12 col-sm-6">
 										<img class="img-responsive image2 no-animated" src="img/cuatro/cobi_filatelic.png" alt="Cobi Filatelic">
 									</div>
 								</div>
@@ -458,11 +458,11 @@
 								</div>
 
 								<div class="col-xs-12 col-sm-6">
-									<img class="rota_1_mov max-img sello1 step step_orderToAnimate-3 no-animated" src="img/cinco/sello20.png" alt="Sello Pre Olímpico Barcelona 92'">
+									<img class="rota_1_mov max-img sello1 step step_orderToAnimate-3 no-animated imgmw320" src="img/cinco/sello20.png" alt="Sello Pre Olímpico Barcelona 92'">
 
-									<img class="rota_2_mov max-img sello2 no-animated" src="img/cinco/sello50.png" alt="Sello Pre Olímpico Barcelona 92'">
+									<img class="rota_2_mov max-img sello2 no-animated imgmw320" src="img/cinco/sello50.png" alt="Sello Pre Olímpico Barcelona 92'">
 
-									<img class="rota_1_mov max-img sello3 no-animated" src="img/cinco/sello45.png" alt="Sello Pre Olímpico Barcelona 92'">
+									<img class="rota_1_mov max-img sello3 no-animated imgmw320" src="img/cinco/sello45.png" alt="Sello Pre Olímpico Barcelona 92'">
 								</div>
 							</div>
 
@@ -817,23 +817,23 @@
 							</div>
 
 							<div>
-								<img class="absolute-center-up2 max-img imgmw320 rota25 element1 step step_orderToAnimate-2 no-animated" src="img/siete/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
+								<img class="absolute-center-up2 max-img imgmw320 rota25 element1 step step_orderToAnimate-2 no-animated imgmw320" src="img/siete/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
 							</div>
 
 							<div>
-								<img class="previs-top-right4 max-img rota3 element3" src="img/siete/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+								<img class="previs-top-right4 max-img rota3 element3 imgmw320" src="img/siete/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
 							</div>
 
 							<div>
-								<img class="previs-bottom-left2 max-img imgmw-media rota3 element4" src="img/siete/sello4.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+								<img class="previs-bottom-left2 max-img imgmw-media rota3 element4 imgmw320" src="img/siete/sello4.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
 							</div>
 
 							<div>
-								<img class="previs-bottom-right4 max-img imgmw-media element5" src="img/siete/sello5.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+								<img class="previs-bottom-right4 max-img imgmw-media element5 imgmw320" src="img/siete/sello5.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
 							</div>
 
 							<div>
-								<img class="previs-top-left2 max-img rota3 element2" src="img/siete/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+								<img class="previs-top-left2 max-img rota3 element2 imgmw320" src="img/siete/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
 							</div>
 
 
