feat(startbutton): added and delete mouse icon

--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
 <!-- Fin Full Screen Button -->
 
 <!-- Boton Scroll Down -->
-<div class="scroll-down-wrap no-border">
+<!--div class="scroll-down-wrap no-border">
 	<a href="#" class="section-down-arrow ">
 		<svg class="nectar-scroll-icon" viewBox="0 0 30 45" enable-background="new 0 0 30 45">
 			<path class="nectar-scroll-icon-path" fill="none" stroke="#ffffff" stroke-width="2" stroke-miterlimit="10" d="M15,1.118c12.352,0,13.967,12.88,13.967,12.88v18.76  c0,0-1.514,11.204-13.967,11.204S0.931,32.966,0.931,32.966V14.05C0.931,14.05,2.648,1.118,15,1.118z">
 			</path>
 		</svg>
 	</a>
-</div>
+</div-->
 <!-- Fin Botón Scroll Down -->
 
 <div id="fullpage">
@@ -128,6 +128,10 @@
 
 					<div class="cobi no-animated step step_orderToAnimate-2">
 						<img src="img/uno/cobi.png" alt="Cobi">
+					</div>
+
+					<div class="start">
+						<a href="javascript:void(null)">Llegeix la història</a>
 					</div>
 				</div>
 			</div>
