Actualización de textos y solución de z-index en algunas imágenes.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="full-menu">
 	<nav id="menu" class="menu">
 		<ul>
-			<li class="introduccio"><a href="#firstsection">Introducció</a></li>
+			<li class="introduccio"><a href="#firstsection">Presentació</a></li>
 			<li class="presentacio"><a href="#presentacio">Barcelona ‘92</a></li>
 			<li class="epreolimpiques"><a href="#epreolimpiques">Emisions Preolímpiques</a></li>
 			<li class="eolimpiques"><a href="#eolimpiques">Emisions Olímpiques</a></li>
@@ -47,11 +47,11 @@
 	<a href="#">Compartir</a>
 	<div class="icon-wrapper">
 		<ul>
-			<li><a target="_blank" href="https://twitter.com/share" data-url="{{ content.absolute_url }}"><i class="fa fa-twitter"></i></a></li>
-			<li><a target="_blank" href="https://facebook.com/sharer/sharer.php?" data-url="{{ content.absolute_url }}"><i class="fa fa-facebook"></i></a></li>
-			<li><a target="_blank" href="#" onclick="javascript:window.open('https://www.linkedin.com/shareArticle?mini=true&amp;url={{ content.absolute_url }}&amp;title=','popup','width=600,height=600');"><i class="fa fa-linkedin"></i></a></li>
-			<li><a target="_blank" href="https://plus.google.com/share?url={{ content.absolute_url }}" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;"><i class="fa fa-google-plus"></i></a></li>
-			<li><a href="mailto:info@silvertech.com"><i class="fa fa-link"></i></a></li>
+			<li><a target="_blank" href="https://twitter.com/home?status=Mira%20esta%20web%20www.dcntest.com" data-url="{{ content.absolute_url }}"><i class="fa fa-twitter"></i></a></li>
+			<li><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=www.dcntest.com" data-url="{{ content.absolute_url }}"><i class="fa fa-facebook"></i></a></li>
+			<li><a target="_blank" href="#" onclick="javascript:window.open('https://www.linkedin.com/shareArticle?mini=true&url=www.dcntest.com&title=Web%20de%20Sellos%20Olimpiada%2092&summary=Mira%20esta%20web&source=');"><i class="fa fa-linkedin"></i></a></li>
+			<li><a target="_blank" href="https://plus.google.com/share?url=www.dcntest.com" onclick="javascript:window.open(this.href,'', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;"><i class="fa fa-google-plus"></i></a></li>
+			<li><a href="mailto:info@silvertech.com?&subject=Mira esta web&body=Hola,%20%0A%0AMira%20esta%20web%20de%20Sellos%20de%20las%20Olimpiadas%20de%20Barcelona%2092',%20te%20encantar%C3%A1!!%0A%0Ahttp%3A//www.dcntest.com"><i class="fa fa-link"></i></a></li>
 			<li><a href="#" class="close-social-icons"><i class="fa fa-times"></i></a></li>
 		</ul>
 	</div>
@@ -97,7 +97,7 @@
 
 	<!-- SECCION 1 -->
 	<section id="firstsection" data-menuanchor="firstsection" class="anchorOnVerticalNavigation section first fondo1">
-		<span class="tooltip_title">Introducció</span>
+		<span class="tooltip_title">Presentació</span>
 		<div class="diapo diapo_1 no-animated">
 			<div class="diapo_container">
 				<div class="diapo_content">
@@ -119,7 +119,7 @@
 
 								<div class="contenido">
 									<h1 class="text-center">Ressorgiment</h1>
-									<p class="text-center"><strong>Els Jocs Olímpics de Barcelona van celebrar-se entre el 25 de juliol i el 9 d'agost de 1992</strong>.<br> La designació com a ciutat organitzadora comportà una profunda transformació urbanística, social i la creació de nous equipaments. Aquest esforç es complementà amb una acurada imatge corporativa, sota la voluntat de presentar una ciutat moderna i actual.  I en aquest sentit, la <strong>filatèlia olímpica va tenir un gran paper</strong>. </p>
+									<p class="text-center"><strong>Els Jocs Olímpics de Barcelona van celebrar-se entre el 25 de juliol i el 9 d'agost de 1992</strong>.<br> La designació com a ciutat organitzadora comportà una profunda transformació urbanística, social i la creació de nous equipaments. Aquest esforç es complementà amb una acurada imatge corporativa, sota la voluntat de presentar una ciutat moderna i actual.  I en aquest sentit, la <strong>filatèlia olímpica hi va tenir un paper destacat</strong>. </p>
 								</div>
 
 							</div>
@@ -145,13 +145,14 @@
 								<div class="contenido">
 									<div class="titulodesc">
 										<h1 class="text-center">Barcelona, doble capitalitat olímpica</h1>
-										<p class="text-center">L'esdeveniment esportiu  l'organitzava el COOP (Comitè Organitzador de l'Olimpíada Popular) amb el suport del govern de la II República. La competició havia d'aplegar més de 6.000 esportistes nacionals i internacionals de diferents categories. Es tractava d'una alternativa als Jocs Olímpics de Berlín, celebrats aquell mateix any. <strong>Malauradament l'esdeveniment va quedar suspès per l'inici de la Guerra Civil.</strong></p>
+										<p class="text-center">Molt abans del 1992, Barcelona va ser nomenada seu de l’Olimpíada Popular, concretament entre el 19 i el 26 de juliol de 1936. Un gran esdeveniment esportiu organitzat pel COOP (Comitè Organitzador de l'Olimpíada Popular) amb el suport del govern de la II República que havia d’aplegar a més de 6.000 esportistes internacionals en diferents categories.</p>
 									</div>
 
 									<div class="row">
 										<div class="col-sm-12">
 											<div class="col-sm-6 p60 pr0 text-right text no-animated step step_orderToAnimate-4">
-												<p>Molt abans del 1992, <strong>Barcelona va ser nomenada seu de l'Olimpíada Popular</strong>, concretament entre el 19  i el <br>26 de juliol del 1936.</p>
+												<!--<p>Molt abans del 1992, <strong>Barcelona va ser nomenada seu de l'Olimpíada Popular</strong>, concretament entre el 19  i el <br>26 de juliol del 1936.</p>-->
+												<p>Malauradament, l’inici de la <strong>Guerra Civil</strong> espanyola va forçar-ne la <strong>suspensió</strong>.</p>
 												<span class="minidesc claim no-animated step step_orderToAnimate-6">Vinyeta de 10 cèntims emesa  per recaptar diners<br> per a la celebració de l'Olimpíada Popular, 1936. </span>
 											</div>
 											<div class="col-sm-6 p60 image no-animated step step_orderToAnimate-5">
@@ -179,13 +180,13 @@
 			<div class="diapo_container">
 				<div class="diapo_content">
 					<div class="container flex-parent">
-						<div class="row">
+						<div class="row z999">
 							<div class="col-sm-12 flex-child">
 								<div class="contenido">
 									<div class="titulodesc no-animated step step_orderToAnimate-1">
 										<h1 class="text-center">Barcelona '92</h1>
 										<p class="text-center">Barcelona va ser escollida seu de la XXV edició dels Jocs d'Estiu durant la 91a sessió del Comitè Olímpic Internacional, celebrada el 17 d'octubre de 1986 a Lausana, Suïssa. <strong>La nominació va despertar l'eufòria per tota Catalunya.</strong> </p>
-										<p class="text-center">S'iniciava una carrera contra-rellotge per acollir el que serien <strong>"els millors Jocs Olímpics de la història", segons declaracions de Joan Antoni Samaranch.</strong></p>
+										<p class="text-center">S'iniciava una carrera contra-rellotge per acollir el que serien <strong>“Els millors Jocs Olímpics de la història”, amb paraules de Joan Antoni Samaranch.</strong></p>
 									</div>
 								</div>
 
@@ -230,7 +231,7 @@
 									<img class="sobre" src="img/dos/sobre.png" alt="">
 
 									<div class="col-sm-4">
-										<p class="pt160">També per a l'ocasió, <strong>Correus va habilitar un codi postal propi, el 08092</strong>, per agilitzar la distribució de la correspondència entre el comité organitzador, les delegacions participants i els mitjans de comunicació. Només va funcionar entre l'1 de juliol i el 15 de setembre del 1992. </p>
+										<p class="pt160">A més, <strong>Correus va habilitar un codi postal propi, el 08092</strong>, per agilitzar la distribució de la correspondència entre el comitè organitzador, les delegacions participants i els mitjans de comunicació. Només va funcionar entre l'1 de juliol i el 15 de setembre del 1992. </p>
 									</div>
 								</div>
 							</div>
@@ -252,14 +253,14 @@
 									<div class="col-sm-6 pt160">
 										<div class="titulodesc">
 											
-											<p>Durant les olimpiades els serveis bàsics  de comunicacions van reforçar-se amb…</p>
+											<p><strong>Saps quin impacte van tenir les olimpíades en l’administració postal?</strong></p>
 
 											<p>
 											- La instal·lació de set noves oficines de correus a Barcelona i a les subseus olímpiques de Badalona, Banyoles i La Seu d'Urgell.<br>
 
 											- Habilitació de tres estafetes de correus mòbils.<br>
 
-											- Mobilització de gairebé 750 treballadors del servei postals.<br>
+											- Mobilització de gairebé 750 treballadors.<br>
 
 											- Instal·lació de 50 noves bústies a les vil·les    i les subseus olímpiques. 
 											</p>
@@ -335,7 +336,7 @@
 								</div>
 
 								<div class="col-xs-12 col-sm-7">
-									<p class="text-left pt80">La candidatura olímpica contemplà canvis en matèria  de transports, urbanisme, comunicacions i infraestructures. A més, però, <strong>també es van assolir millores en matèria  de política cultural.</strong></p>
+									<p class="text-left pt80">L’elecció de Barcelona com a seu olímpica comportà canvis en matèria  de transports, urbanisme, comunicacions i infraestructures.<br> A més, però, <strong>també es van assolir millores en matèria  de política cultural.</strong></p>
 								</div>
 							</div>
 
@@ -373,7 +374,7 @@
 							<div class="col-sm-12">
 								<div class="titulodesc">
 									<h1 class="text-center">Olymphilex ‘92</h1>
-									<p class="text-center">En el marc de les activitats programades en l'Olimpíada Cultural es presentà la <strong>cinquena edició de l'Exposició Mundial de Filatèlia Olímpica i Esportiva</strong>, a la Facultat de Ciències Econòmiques de la Universitat de Barcelona. Un gran nombre d'expositors, col·leccionistes  i comerciants de l'àmbit filatèlic van exhibir segells i material postal de temàtica olímpica.</p>
+									<p class="text-center">En el marc de les activitats programades en l'Olimpíada Cultural es presentà la <strong>cinquena edició de l'Exposició Mundial de Filatèlia Olímpica i Esportiva</strong>, a la Facultat de Ciències Econòmiques de la Universitat de Barcelona. Un gran nombre d'expositors, col·leccionistes  i comerciants de l'àmbit filatèlic van exhibir-hi segells i material postal de temàtica olímpica.</p>
 								</div>
 							</div>
 
@@ -411,7 +412,7 @@
 					<!-- Contenido seccion -->
 					<div class="container">
 						<div class="row">
-							<div class="col-sm-12 part1 step step_orderToAnimate-1 no-animated">
+							<div class="col-sm-12 part1 step step_orderToAnimate-1 no-animated z999">
 
 								<div class="contenido">
 									<h1 class="text-center">Les emissions filatèliques preolímpiques</h1>
@@ -514,7 +515,7 @@
 							<div class="col-sm-12 z999">
 								<div>
 									<h1 class="text-right pt40 pb10">Emissió preolímpica #3</h1>
-									<p class="text-right pt20">Dissenyador: <strong>Robert Llimós i Oriol.</strong><br>(Barcelona, 1943). Esports representats: Esgrima, Futbol i Gimnàstica.</p>
+									<p class="text-right pt20">Dissenyador: <strong>Robert Llimós i Oriol (Barcelona, 1943)</strong><br>Esports representats: Esgrima, Futbol i Gimnàstica.</p>
 								</div>
 							</div>
 
@@ -539,7 +540,7 @@
 							<div class="col-sm-12 z999">
 								<div>
 									<h1 class="text-center pt40 pb10">Emissió preolímpica #4</h1>
-									<p class="text-center pt20">Dissenyador: <strong>Eduard Arranz-Bravo.</strong><br>(Barcelona, 1941). Esports representats: Halterofília, Hoquei sobre herba i Judo.</p>
+									<p class="text-center pt20">Dissenyador: <strong>Eduard Arranz-Bravo (Barcelona, 1941)</strong><br>Esports representats: Halterofília, Hoquei sobre herba i Judo.</p>
 								</div>
 							</div>
 
@@ -565,7 +566,7 @@
 							<div class="col-sm-12 flex-child">
 								<div>
 									<h1 class="text-center pb10">Emissió preolímpica #5</h1>
-									<p class="text-center pt20">Dissenyador: <strong>Gerard Sala i Roselló.</strong><br>(Tona, Osona, 1942). Esports representats: Lluita, Natació i Beisbol.</p>
+									<p class="text-center pt20">Dissenyador: <strong>Gerard Sala i Roselló (Tona, Osona, 1942)</strong><br>Esports representats: Lluita, Natació i Beisbol.</p>
 								</div>
 							</div>
 
@@ -600,7 +601,7 @@
 							<div class="col-sm-6 flex-child z999">
 								<div>
 									<h1 class="text-left pb10">Emissió preolímpica #6</h1>
-									<p class="text-left pt20">Dissenyador: <strong>Perico Pastor.</strong><br>(La Seu d'Urgell, 1953). Esports representats: Pentatló, Piragüisme i Rem.</p>
+									<p class="text-left pt20">Dissenyador: <strong>Perico Pastor (La Seu d'Urgell, 1953)</strong><br>Esports representats: Pentatló, Piragüisme i Rem.</p>
 								</div>
 							</div>
 
@@ -634,7 +635,7 @@
 							<div class="col-sm-12 z999">
 								<div>
 									<h1 class="text-center pt40 pb10">Emissió preolímpica #7</h1>
-									<p class="text-center pt20">Dissenyador: <strong>Joan-Pere Viladecans.</strong><br>(Barcelona, 1948). Esports representats: Tennis, Tennis de taula i Tir olímpic.</p>
+									<p class="text-center pt20">Dissenyador: <strong>Joan-Pere Viladecans (Barcelona, 1948)</strong><br>Esports representats: Tennis, Tennis de taula i Tir olímpic.</p>
 								</div>
 							</div>
 
@@ -669,7 +670,7 @@
 							<div class="col-sm-12 z999">
 								<div>
 									<h1 class="text-center pt40 pb10">Emissió preolímpica #8</h1>
-									<p class="text-center pt20">Dissenyador: <strong>Xano Armenter.</strong><br>(Las Palmas, 1956). Esports representats: Tir amd arc, Vela i Voleibol.</p>
+									<p class="text-center pt20">Dissenyador: <strong>Xano Armenter (Las Palmas, 1956)</strong><br>Esports representats: Tir amd arc, Vela i Voleibol.</p>
 								</div>
 							</div>
 
@@ -848,7 +849,7 @@
 
 	<!-- SECCION 23 -->
 	<section id="emprempta" class="anchorOnVerticalNavigation section nine fondo8">
-		<span class="tooltip_title">L'emprempta</span>
+		<span class="tooltip_title">L’empremta</span>
 		<div class="diapo diapo_1 step step_orderToAnimate-1 no-animated">
 			<div class="diapo_container">
 				<div class="diapo_content">
@@ -858,8 +859,8 @@
 						<div class="row">
 							<div class="col-sm-8 col-sm-offset-2 title z999">
 								<div>
-									<h1 class="text-center pb10">L’emprempta</h1>
-									<p class="text-center pt20">Els segells emesos durant els Jocs Olímpics de Barcelona <strong>van posar  el seu gra de sorra en la projecció mundial d'una ciutat moderna i actual.</strong>  La majoria de les il·lustracions,en bona part encarregades a artistes  i dissenyadors gràfics catalans, aposten per <strong>dissenys frescos i innovadors,  un fet poc habitual en la filatèlia del moment.</strong> </p>
+									<h1 class="text-center pb10">L’empremta</h1>
+									<p class="text-center">Els segells emesos durant els Jocs Olímpics de Barcelona <strong>van posar  el seu gra de sorra en la projecció mundial d'una ciutat moderna i actual.</strong>  La majoria de les il·lustracions,en bona part encarregades a artistes  i dissenyadors gràfics catalans, aposten per <strong>dissenys frescos i innovadors,  un fet poc habitual en la filatèlia del moment.</strong> </p>
 								</div>
 							</div>
 
@@ -897,7 +898,7 @@
 				    </ul>
 				</div>
 			    <div class="column">
-				    <h3>Material d'arxiu i gráfica:</h3>
+				    <h3>Material d'arxiu i gràfica:</h3>
 				    <ul>
 				    	<li>Arxiu Fotogràfic de Barcelona</li>
 				    	<li>Arxiu Històric de la Ciutat</li>
@@ -906,13 +907,14 @@
 				    </ul>
 				</div>
 			    <div class="column">
-				    <h3>Agraiments:</h3>
+				    <h3>Agraïments:</h3>
 				    <ul>
-				    	<li>Alberto Aragón-Pérez,</li>
-				    	<li>Antonio Aguilar,</li>
-				    	<li>Dídac Catalan,</li>
-				    	<li>Joan F. Molina,</li>
-				    	<li>Santi Barjau.</li>
+				    	<li>Alberto Aragón-Pérez</li>
+				    	<li>Antonio Aguilar</li>
+				    	<li>Dídac Catalán</li>
+				    	<li>Joan F. Molina</li>
+				    	<li>Santi Barjau</li>
+				    	<li>Laia Aleixendri</li>
 				    </ul>
 				</div>
 		    </div>
